--- a/app/src/main/res/drawable/rectangle_xiketic_box.xml
+++ b/app/src/main/res/drawable/rectangle_xiketic_box.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item>
-        <shape android:shape="rectangle">
-            <stroke android:width="3dp" android:color="@color/xiketic" />
-        </shape>
-    </item>
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
+    <stroke android:width="2dp"
+        android:color="@color/xiketic" />
+    <corners android:radius="5dp"/>
+</shape>
