--- a/app/src/main/res/layout/fragment_auth.xml
+++ b/app/src/main/res/layout/fragment_auth.xml
@@ -8,7 +8,7 @@
     tools:context=".fragments.FragmentAuth">
 
     <TextView
-        android:id="@+id/txtLogIn"
+        android:id="@+id/edtLogIn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="75dp"
@@ -23,34 +23,36 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/txtEmail"
+        android:id="@+id/edtEmail"
         android:layout_width="340dp"
         android:layout_height="50dp"
         android:layout_marginTop="75dp"
         android:background="@drawable/rectangle_xiketic_box"
         android:ems="10"
+        android:paddingHorizontal="10dp"
         android:fontFamily="@font/roboto"
-        android:hint="  Email"
+        android:hint="Email"
         android:inputType="textEmailAddress"
         android:textColorHint="@color/xiketic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtLogIn" />
+        app:layout_constraintTop_toBottomOf="@+id/edtLogIn" />
 
     <EditText
-        android:id="@+id/txtPassword"
+        android:id="@+id/edtPassword"
         android:layout_width="340dp"
         android:layout_height="50dp"
         android:background="@drawable/rectangle_xiketic_box"
         android:ems="10"
-        android:hint="  Password"
+        android:paddingHorizontal="10dp"
+        android:hint="Password"
         android:fontFamily="@font/roboto"
         android:inputType="textPassword"
         android:textColorHint="@color/xiketic"
         android:layout_marginTop="60dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />
+        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />
 
     <Button
         android:id="@+id/btnSignIn"
@@ -60,10 +62,11 @@
         android:background="@drawable/rectangle_gradient_box"
         android:fontFamily="@font/roboto_black"
         android:text="Log In"
+        android:textColor="#FFFFFF"
         android:textAllCaps="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />
+        app:layout_constraintTop_toBottomOf="@+id/edtPassword" />
 
     <TextView
         android:id="@+id/txtGoToSignUp"
@@ -74,6 +77,7 @@
         android:text="Don't have an account? Sign Up"
         android:fontFamily="@font/roboto"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/txtRecover"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />
 
